; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_amrwbdec.c_find_hb_gain.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_amrwbdec.c_find_hb_gain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { float (float*, float*, i64)* }

@MODE_23k85 = common dso_local global i64 0, align 8
@qua_hb_gain = common dso_local global float* null, align 8
@AMRWB_SFR_SIZE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (float (%struct.TYPE_5__*, float*, i64, i64)* @find_hb_gain to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal float @find_hb_gain(%struct.TYPE_5__* %0, float* %1, i64 %2, i64 %3) #0 {
  %5 = alloca float, align 4
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca float*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca float, align 4
  %12 = alloca float, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %6, align 8
  store float* %1, float** %7, align 8
  store i64 %2, i64* %8, align 8
  store i64 %3, i64* %9, align 8
  %13 = load i64, i64* %9, align 8
  %14 = icmp sgt i64 %13, 0
  %15 = zext i1 %14 to i32
  store i32 %15, i32* %10, align 4
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* @MODE_23k85, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %27

21:                                               ; preds = %4
  %22 = load float*, float** @qua_hb_gain, align 8
  %23 = load i64, i64* %8, align 8
  %24 = getelementptr inbounds float, float* %22, i64 %23
  %25 = load float, float* %24, align 4
  %26 = fmul float %25, 0x3F10000000000000
  store float %26, float* %5, align 4
  br label %62

27:                                               ; preds = %4
  %28 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %29 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %28, i32 0, i32 1
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 0
  %31 = load float (float*, float*, i64)*, float (float*, float*, i64)** %30, align 8
  %32 = load float*, float** %7, align 8
  %33 = load float*, float** %7, align 8
  %34 = getelementptr inbounds float, float* %33, i64 1
  %35 = load i64, i64* @AMRWB_SFR_SIZE, align 8
  %36 = sub nsw i64 %35, 1
  %37 = call float %31(float* %32, float* %34, i64 %36)
  store float %37, float* %12, align 4
  %38 = load float, float* %12, align 4
  %39 = fcmp ogt float %38, 0.000000e+00
  br i1 %39, label %40, label %51

40:                                               ; preds = %27
  %41 = load float, float* %12, align 4
  %42 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %43 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %42, i32 0, i32 1
  %44 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %43, i32 0, i32 0
  %45 = load float (float*, float*, i64)*, float (float*, float*, i64)** %44, align 8
  %46 = load float*, float** %7, align 8
  %47 = load float*, float** %7, align 8
  %48 = load i64, i64* @AMRWB_SFR_SIZE, align 8
  %49 = call float %45(float* %46, float* %47, i64 %48)
  %50 = fdiv float %41, %49
  store float %50, float* %11, align 4
  br label %52

51:                                               ; preds = %27
  store float 0.000000e+00, float* %11, align 4
  br label %52

52:                                               ; preds = %51, %40
  %53 = load float, float* %11, align 4
  %54 = fpext float %53 to double
  %55 = fsub double 1.000000e+00, %54
  %56 = load i32, i32* %10, align 4
  %57 = sitofp i32 %56 to double
  %58 = fmul double 2.500000e-01, %57
  %59 = fsub double 1.250000e+00, %58
  %60 = fmul double %55, %59
  %61 = call float @av_clipf(double %60, double 1.000000e-01, double 1.000000e+00)
  store float %61, float* %5, align 4
  br label %62

62:                                               ; preds = %52, %21
  %63 = load float, float* %5, align 4
  ret float %63
}

declare dso_local float @av_clipf(double, double, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
